vagrant/demos/policy-scale-test/nginx-server.yaml
apiVersion: v1
kind: Service
metadata: 
  name: test
spec:
  selector:
    k8s-app: nginx-server
  ports:
  - port: 80 
    targetPort: 80
